samples/_failures_safe/1761220432_dee9f0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_12d3fc21.c: In function ‘main’:
./samples/SAFE/__tmp_12d3fc21.c:161:5: error: expected expression at end of input
  161 |     if (scanf("%d",
      |     ^~
./samples/SAFE/__tmp_12d3fc21.c:161:5: error: expected declaration or statement at end of input
